# RaftKV

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  test_client.py
cpp-app/: CMakeLists.txt  main.cpp
cpp-app/pb/: consensus.grpc.pb.cc  consensus.grpc.pb.h  consensus.pb.cc  consensus.pb.h
cpp-app/src/: main.cpp
cpp-app/src/commands/: kv_command.hpp
cpp-app/src/config/: config.hpp
cpp-app/src/network/: http_request.hpp  http_server.hpp
cpp-app/src/raft/: raft_client.hpp  state_machine.hpp
cpp-app/src/storage/: kv_store.hpp
go-sidecar/: go.mod  go.sum  main.go
go-sidecar/cmd/sidecar/: main.go
go-sidecar/internal/backend/: client.go
go-sidecar/internal/cluster/: joiner.go
go-sidecar/internal/config/: config.go
go-sidecar/internal/fsm/: fsm.go
go-sidecar/internal/management/: server.go
go-sidecar/internal/raftnode/: node.go
go-sidecar/internal/rpc/: server.go
go-sidecar/pb/: consensus.pb.go  consensus_grpc.pb.go
proto/: consensus.proto
